[gd_scene load_steps=2 format=2]

[ext_resource path="res://ItemEditor.gd" type="Script" id=1]

[node name="ItemEditor" type="PopupPanel"]
margin_right = 348.0
margin_bottom = 332.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="hbButtons" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 340.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
custom_constants/separation = 5
alignment = 1

[node name="btnLoad" type="ToolButton" parent="VBoxContainer/hbButtons"]
margin_right = 42.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
text = "Load"

[node name="btnFirst" type="ToolButton" parent="VBoxContainer/hbButtons"]
margin_left = 47.0
margin_right = 87.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
text = "First"

[node name="btnPrev" type="ToolButton" parent="VBoxContainer/hbButtons"]
margin_left = 92.0
margin_right = 159.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
text = "Previous"

[node name="btnNext" type="ToolButton" parent="VBoxContainer/hbButtons"]
margin_left = 164.0
margin_right = 206.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
text = "Next"

[node name="btnLast" type="ToolButton" parent="VBoxContainer/hbButtons"]
margin_left = 211.0
margin_right = 249.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
text = "Last"

[node name="btnNew" type="ToolButton" parent="VBoxContainer/hbButtons"]
margin_left = 254.0
margin_right = 294.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
text = "New"

[node name="btnSave" type="ToolButton" parent="VBoxContainer/hbButtons"]
margin_left = 299.0
margin_right = 340.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
text = "Save"

[node name="hbName" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 340.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 30 )
custom_constants/separation = 5
alignment = 1

[node name="lineName" type="LineEdit" parent="VBoxContainer/hbName"]
margin_left = 45.0
margin_right = 295.0
margin_bottom = 30.0
rect_min_size = Vector2( 250, 0 )
align = 1
placeholder_text = "Item Name"

[node name="hbDesc" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 340.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 30 )
custom_constants/separation = 5
alignment = 1

[node name="txtDesc" type="TextEdit" parent="VBoxContainer/hbDesc"]
margin_left = 45.0
margin_right = 295.0
margin_bottom = 120.0
rect_min_size = Vector2( 250, 120 )
hint_tooltip = "Item Description"

[node name="hbType" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 192.0
margin_right = 340.0
margin_bottom = 222.0
rect_min_size = Vector2( 0, 30 )
custom_constants/separation = 5
alignment = 1

[node name="obItemType" type="OptionButton" parent="VBoxContainer/hbType"]
margin_left = 45.0
margin_right = 295.0
margin_bottom = 30.0
rect_min_size = Vector2( 250, 30 )
text = "Item Type"

[node name="hbRarity" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 226.0
margin_right = 340.0
margin_bottom = 256.0
rect_min_size = Vector2( 0, 30 )
custom_constants/separation = 5
alignment = 1

[node name="obRarity" type="OptionButton" parent="VBoxContainer/hbRarity"]
margin_left = 45.0
margin_right = 295.0
margin_bottom = 30.0
rect_min_size = Vector2( 250, 30 )
text = "Rarity"

[node name="hbDamage" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 260.0
margin_right = 340.0
margin_bottom = 290.0
rect_min_size = Vector2( 0, 30 )
custom_constants/separation = 5
alignment = 1

[node name="leDmgVal" type="LineEdit" parent="VBoxContainer/hbDamage"]
margin_left = 38.0
margin_right = 96.0
margin_bottom = 30.0
hint_tooltip = "Damage"

[node name="ilDmgType" type="OptionButton" parent="VBoxContainer/hbDamage"]
margin_left = 101.0
margin_right = 301.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 30 )
text = "Damage Type"

[node name="hbResist" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 294.0
margin_right = 340.0
margin_bottom = 324.0
rect_min_size = Vector2( 0, 30 )
custom_constants/separation = 5
alignment = 1

[node name="leResVal" type="LineEdit" parent="VBoxContainer/hbResist"]
margin_left = 38.0
margin_right = 96.0
margin_bottom = 30.0
hint_tooltip = "Resistance"

[node name="ilResType" type="OptionButton" parent="VBoxContainer/hbResist"]
margin_left = 101.0
margin_right = 301.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 30 )
text = "Resistance Type"

[connection signal="pressed" from="VBoxContainer/hbButtons/btnLoad" to="." method="_on_btnLoad_pressed"]
[connection signal="pressed" from="VBoxContainer/hbButtons/btnFirst" to="." method="_on_btnFirst_pressed"]
[connection signal="pressed" from="VBoxContainer/hbButtons/btnPrev" to="." method="_on_btnPrev_pressed"]
[connection signal="pressed" from="VBoxContainer/hbButtons/btnNext" to="." method="_on_btnNext_pressed"]
[connection signal="pressed" from="VBoxContainer/hbButtons/btnLast" to="." method="_on_btnLast_pressed"]
[connection signal="pressed" from="VBoxContainer/hbButtons/btnNew" to="." method="_on_btnNew_pressed"]
[connection signal="pressed" from="VBoxContainer/hbButtons/btnSave" to="." method="_on_btnSave_pressed"]
[connection signal="text_changed" from="VBoxContainer/hbDesc/txtDesc" to="." method="_on_txtDesc_text_changed"]
[connection signal="item_selected" from="VBoxContainer/hbType/obItemType" to="." method="_on_obItemType_item_selected"]
[connection signal="item_selected" from="VBoxContainer/hbRarity/obRarity" to="." method="_on_obRarity_item_selected"]
[connection signal="text_changed" from="VBoxContainer/hbDamage/leDmgVal" to="." method="_on_leDmgVal_text_changed"]
[connection signal="item_selected" from="VBoxContainer/hbDamage/ilDmgType" to="." method="_on_ilDmgType_item_selected"]
[connection signal="text_changed" from="VBoxContainer/hbResist/leResVal" to="." method="_on_leResVal_text_changed"]
[connection signal="item_selected" from="VBoxContainer/hbResist/ilResType" to="." method="_on_ilResType_item_selected"]
